# slate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
config/: config.json  config.toml  oxide.toml  worlds.toml
core/: Cargo.toml
core/src/: db.rs  lib.rs  redis.rs
core/src/character/: mod.rs  pet.rs  skill.rs
core/src/crypt/: mod.rs
core/src/maple/: character.rs  item.rs  mod.rs  pet.rs  skill.rs
core/src/net/: codec.rs  connection.rs  event.rs  mod.rs  packet.rs  packets.rs  server.rs  tcp_server.rs
core/src/pg/: mod.rs  pg_character.rs  pg_keymap.rs  pg_session.rs  session.rs
core/src/state/: session.rs
core/src/util/: mod.rs  shutdown.rs  time.rs
cygnus/: Cargo.toml
cygnus/src/: client.rs  main.rs
cygnus/src/handler/: login.rs  mod.rs
login/: Cargo.toml
login/src/: client.rs  config.rs  db.rs  event_handler.rs  main.rs  packets.rs  queries.rs  server.rs  session.rs  shutdown.rs  state.rs  world.rs
login/src/character/: pet.rs
login/src/crypto/: cipher.rs
login/src/handler/: after_login.rs  character_list.rs  character_name.rs  create_character.rs  delete_character.rs  login.rs  mod.rs  register_pin.rs  unknown.rs  world_list.rs  world_status.rs
login/src/login/: packets.rs  queries.rs  server.rs
login/src/net/: codec.rs  connection.rs  packet.rs
login/src/packet_handler/: after_login.rs  character_list.rs  character_name.rs  create_character.rs  delete_character.rs  login.rs  mod.rs  register_pin.rs  select_character.rs  world_list.rs  world_status.rs
migrations/: 20230724022959_create_accounts.sql  20230813232129_create_characters.sql  20230911011618_create_channels.sql  20230911011618_create_worlds.sql  20230911013921_create_login_sessions.sql  20230911013921_create_sessions.sql  20231211031737_create_equipment.sql  20231213224456_create_keymaps.sql  20231213225543_create_items.sql  20231217203118_create_skills.sql  20231217203418_create_cooldowns.sql  20231217205047_create_quests.sql
oxy-core/: Cargo.toml
oxy-core/src/: lib.rs  packets.rs  prisma.rs  queries.rs
oxy-core/src/crypt/: aes.rs  mod.rs
oxy-core/src/maple/: character.rs  mod.rs
oxy-core/src/net/: client.rs  codec.rs  mod.rs  packet.rs  server.rs  stream.rs
oxy-core/src/nx/: mod.rs
oxy-core/src/nx/quest/: action.rs  mod.rs  requirement.rs
oxy-login/: Cargo.toml  nixpacks.toml
oxy-login/src/: client.rs  main.rs  shared.rs
oxy-login/src/handler/: character_list.rs  create_character.rs  delete_character.rs  login.rs  mod.rs  pin_operation.rs  register_pic.rs  register_pin.rs  select_character.rs  select_character_pic.rs  tos.rs  validate_character_name.rs  world_list.rs  world_status.rs
oxy-web/: .env.example  package-lock.json  package.json
oxy-world/: Cargo.toml
oxy-world/src/: character.rs  client.rs  main.rs  map.rs  shared.rs
oxy-world/src/handler/: connect.rs  general_chat.rs  mod.rs  move_character.rs  quest_action.rs
prisma/: package-lock.json  schema.prisma
prisma-cli/: Cargo.toml
slate-channel/: Cargo.toml
slate-channel/scripts/portal/: tuto_chat_npc.py
slate-channel/src/: main.rs  script_engine.rs  server.rs  session.rs  state.rs
slate-channel/src/packet_handler/: change_map_special.rs  connect.rs  mod.rs  move_character.rs  quest_action.rs
slate-data/: Cargo.toml
slate-data/src/: lib.rs  packet.rs
slate-data/src/maple/: character.rs  map.rs  mod.rs
slate-data/src/nx/: map.rs  mod.rs  portal.rs  quest.rs  quest_action.rs  quest_requirement.rs
slate-data/src/sql/: channel.rs  character.rs  equipment.rs  item.rs  keymap.rs  mod.rs  quest.rs  skill.rs
slate-login/: Cargo.toml
slate-login/src/: main.rs  server.rs
slate-login/src/packet_handler/: character_list.rs  create_character.rs  delete_character.rs  login.rs  mod.rs  pin_operation.rs  register_pic.rs  register_pin.rs  select_character.rs  select_character_pic.rs  tos.rs  validate_character_name.rs  world_list.rs  world_status.rs
slate-net/: Cargo.toml
slate-net/src/: aes.rs  lib.rs  shanda.rs
slate-tools/: Cargo.toml
slate-tools/src/: main.rs
slime-channel/: Cargo.toml
slime-channel/src/: main.rs  server.rs  session.rs  shutdown.rs  state.rs
slime-channel/src/packet_handler/: connect.rs  mod.rs  move_character.rs  quest_action.rs
slime-data/: Cargo.toml
slime-data/src/: config.rs  lib.rs  packet.rs
slime-data/src/maple/: character.rs  map.rs  mod.rs
slime-data/src/nx/: equipment.rs  map.rs  mod.rs  quest.rs  quest_action.rs
slime-data/src/sql/: account.rs  character.rs  equipment.rs  item.rs  keymap.rs  login_session.rs  mod.rs  quest.rs  skill.rs  world.rs
slime-login/: Cargo.toml
slime-login/src/: config.rs  main.rs  model.rs  packet.rs  queries.rs  query.rs  server.rs
slime-login/src/packet_handler/: character_list.rs  create_character.rs  delete_character.rs  login.rs  mod.rs  pin_operation.rs  register_pic.rs  register_pin.rs  select_character.rs  select_character_pic.rs  tos.rs  validate_character_name.rs  world_list.rs  world_status.rs
slime-net/: Cargo.toml
slime-net/src/: aes.rs  codec.rs  lib.rs  packet.rs  stream.rs
slime-nx/: Cargo.toml
slime-nx/src/: equipment.rs  lib.rs
slime-tools/: Cargo.toml
slime-tools/src/: main.rs
slime-world/: Cargo.toml
slime-world/src/: main.rs  server.rs
sql/: accounts.sql  characters.sql  cooldowns.sql  keymaps.sql  quest.sql  sessions.sql  skills.sql
src/: channel.rs  character.rs  client.rs  config.rs  login_server.rs  main.rs  main_old.rs  maple_aes.rs  maple_codec.rs  packet.rs  shanda.rs  world.rs
src/character/: mod.rs
src/crypto/: cipher.rs  maple_aes.rs  mod.rs  shanda.rs
src/handler/: after_login.rs  character_list.rs  character_name.rs  create_character.rs  delete_character.rs  login.rs  mod.rs  register_pin.rs  unknown.rs  world_list.rs  world_status.rs
src/login/: handlers.rs  mod.rs  packets.rs  queries.rs  server.rs
src/net/: codec.rs  connection.rs  maple_codec.rs  mod.rs  packet.rs
world/: Cargo.toml
world/src/: client.rs  event_handler.rs  main.rs  packets.rs  server.rs
(+13 files in other folders)
