[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
tokio-stream = "0.1.9"
futures = "0.3.21"
bytes = "1.2.0"

# database
sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls" , "postgres" ] }

# crypto
aes = "0.8.1"
rand = "0.8.5"
pbkdf2 = "0.11.0"

# logging
log = "0.4.17"
simple_logger = "2.2.0"

# misc
dotenv = "0.15.0"
toml = "0.5.9"
serde = { version = "1.0.140", features = ["derive"] }
once_cell = "1.13.0"