[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
tokio-stream = "0.1.9"
futures = "0.3.21"
bytes = "1.2.0"
sqlx = { version = "0.6.1", features = [ "runtime-tokio-native-tls" , "postgres" ] }
aes = "0.8.1"
rand = "0.8.5"
log = "0.4.17"
simple_logger = "2.2.0"
chrono = "0.4.22"
