[package]
name = "oxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.1"
anyhow = "1.0.65"
async-trait = "0.1.57"
bytes = "1.2.1"
log = "0.4.17"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
rand = "0.8.5"
serde = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }
