[package]
name = "oxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.2"
anyhow = "1.0.68"
bytes = "1.4.0"
futures = "0.3.26"
log = "0.4.17"
nx = "0.3.0"
once_cell = "1.17.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = ['postgresql'] }
rand = "0.8.5"
serde = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.4"
