[package]
name = "oxy-login"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
log = "0.4.17"
once_cell = "1.17.1"
oxy-core = { path = "../oxy-core" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = ['postgresql'] }
rust-argon2 = "1.0.0"
serde = "1.0.152"
serde_json = "1.0.93"
simple_logger = "4.0.0"
tokio = { version = "1.25.0", features = ["rt"] }
