[package]
name = "oxy-world"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.26"
log = "0.4.17"
oxy-core = { path = "../oxy-core" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = ['postgresql'] }
rand = "0.8.5"
simple_logger = "4.0.0"
tokio = { version = "1.25.0", features = ["rt"] }
tokio-util = "0.7.4"
