[package]
name = "slate-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-data = { path = "../slate-data" }
slate-net = { path = "../slate-net" }

anyhow = "1.0.72"
boa_engine = { git = "https://github.com/boa-dev/boa.git", branch = "main" }
boa_gc = { git = "https://github.com/boa-dev/boa.git", branch = "main" }
dashmap = "5.5.3"
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.30"
log = "0.4.20"
rand = "0.8.5"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }