[package]
name = "slime-world"
version = "0.1.0"
edition = "2021"

[dependencies]
slime-data = { path = "../slime-data" }
slime-net = { path = "../slime-net" }

anyhow = "1.0.72"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
tokio = { version = "1.29.1", features = ["full"] }
