[package]
name = "slime-data"
version = "0.1.0"
edition = "2021"

[dependencies]
slime-net = { path = "../slime-net" }

anyhow = "1.0.72"
log = "0.4.20"
nx = "0.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = "1.0.183"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tokio = "1.31.0"
toml = "0.7.6"
