[package]
name = "slime-login"
version = "0.1.0"
edition = "2021"

[dependencies]
slime-data = { path = "../slime-data" }
slime-net = { path = "../slime-net" }

anyhow = "1.0.72"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
rust-argon2 = "2.0.0"
serde = "1.0.183"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
