[package]
name = "slime-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.4.11", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
rust-argon2 = "2.0.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }
tokio = { version = "1.29.1", features = ["full"] }
